// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"stylelint.validate" setting when set to ["scss"] should lint and auto-fix scss 1`] = `
[
  {
    "code": "color-hex-length",
    "codeDescription": {
      "href": "https://stylelint.io/user-guide/rules/color-hex-length",
    },
    "message": "Expected "#fff" to be "#ffffff" (color-hex-length)",
    "range": {
      "end": {
        "character": 13,
        "line": 2,
      },
      "start": {
        "character": 9,
        "line": 2,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`"stylelint.validate" setting when set to ["scss"] should lint and auto-fix scss 2`] = `
"/* prettier-ignore */
a {
  color: #ffffff;
}
"
`;

exports[`"stylelint.validate" setting when set to ["scss"] shouldn't lint or fix css 1`] = `
"/* prettier-ignore */
a {
  color: #fff;
}
"
`;

exports[`"stylelint.validate" setting when set to ["scss"] shouldn't lint or fix markdown 1`] = `
"# title

\`\`\`css
a {
  color: #fff;
}
\`\`\`
"
`;
